<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>
		4.0.0
	</modelVersion>
	<parent>
		<groupId>
			org.springframework.boot
		</groupId>
		<artifactId>
			spring-boot-starter-parent
		</artifactId>
		<version>
			3.4.3
		</version>
		<relativePath />
		<!-- lookup parent from repository -->
	</parent>
	<groupId>
		com.autonext.code
	</groupId>
	<artifactId>
		autonext_server
	</artifactId>
	<version>
		0.0.1-SNAPSHOT
	</version>
	<name>
		autonext_server
	</name>
	<description>
		Demo project for Spring Boot
	</description>
	<url />
	<licenses>
		<license />
	</licenses>
	<developers>
		<developer />
	</developers>
	<scm>
		<connection />
		<developerConnection />
		<tag />
		<url />
	</scm>
	<properties>
		<java.version>
			23
		</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>
				jakarta.persistence
			</groupId>
			<artifactId>
				jakarta.persistence-api
			</artifactId>
			<version>
				3.1.0
			</version>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-security
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-oauth2-resource-server
			</artifactId>
			<version>
				3.4.3
			</version>
		</dependency>
		<dependency>
			<groupId>
				io.jsonwebtoken
			</groupId>
			<artifactId>
				jjwt-api
			</artifactId>
			<version>
				0.12.6
			</version>
		</dependency>
		<dependency>
			<groupId>
				io.jsonwebtoken
			</groupId>
			<artifactId>
				jjwt-impl
			</artifactId>
			<version>
				0.12.6
			</version>
		</dependency>
		<dependency>
			<groupId>
				io.jsonwebtoken
			</groupId>
			<artifactId>
				jjwt-jackson
			</artifactId>
			<version>
				0.12.6
			</version>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-data-jpa
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-actuator
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-mail
			</artifactId>
		</dependency>
		<!--
		<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		-->
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-web
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-devtools
			</artifactId>
			<scope>
				runtime
			</scope>
			<optional>
				true
			</optional>
		</dependency>
		<dependency>
			<groupId>
				mysql
			</groupId>
			<artifactId>
				mysql-connector-java
			</artifactId>
			<version>
				8.0.33
			</version>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-test
			</artifactId>
			<scope>
				test
			</scope>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.security
			</groupId>
			<artifactId>
				spring-security-test
			</artifactId>
			<scope>
				test
			</scope>
		</dependency>
		<dependency>
			<groupId>
				org.springdoc
			</groupId>
			<artifactId>
				springdoc-openapi-starter-webmvc-ui
			</artifactId>
			<version>
				2.2.0
			</version>
		</dependency>
		<dependency>
			<groupId>
				org.hibernate
			</groupId>
			<artifactId>
				hibernate-core
			</artifactId>
			<version>
				6.6.10.Final
			</version>
			<type>
				pom
			</type>
		</dependency>
		<dependency>
			<groupId>
				io.github.cdimascio
			</groupId>
			<artifactId>
				java-dotenv
			</artifactId>
			<version>
				5.2.2
			</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>
					org.springframework.boot
				</groupId>
				<artifactId>
					spring-boot-maven-plugin
				</artifactId>
			</plugin>
		</plugins>
	</build>
</project>
